paryty-v1.0/deploy/kubernetes/base/cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paryty-cluster
  namespace: paryty
spec:
  selector:
    app.kubernetes.io/name: paryty-cluster
  ports:
    - name: grpc
      port: 443
      targetPort: grpc
      protocol: TCP
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
