paryty-v1.0/deploy/kubernetes/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paryty-frontend
  namespace: paryty
spec:
  selector:
    app.kubernetes.io/name: paryty-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  type: ClusterIP
