paryty-v1.0/deploy/kubernetes/base/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paryty-query
  labels:
    app.kubernetes.io/component: query
spec:
  ports:
    - port: 8080
      name: http
      targetPort: http
  selector:
    app.kubernetes.io/component: query
